// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser.getSymbols allSymbols 1`] = `
Object {
  "functions": Array [
    Object {
      "identifier": Node {
        "end": 58,
        "loc": SourceLocation {
          "end": Position {
            "column": 25,
            "line": 4,
          },
          "identifierName": "incrementCounter",
          "start": Position {
            "column": 9,
            "line": 4,
          },
        },
        "name": "incrementCounter",
        "start": 42,
        "type": "Identifier",
      },
      "location": SourceLocation {
        "end": Position {
          "column": 1,
          "line": 6,
        },
        "start": Position {
          "column": 0,
          "line": 4,
        },
      },
      "name": "incrementCounter",
      "parameterNames": Array [
        "counter",
      ],
    },
    Object {
      "identifier": null,
      "location": SourceLocation {
        "end": Position {
          "column": 27,
          "line": 8,
        },
        "start": Position {
          "column": 12,
          "line": 8,
        },
      },
      "name": "sum",
      "parameterNames": Array [
        "a",
        "b",
      ],
    },
    Object {
      "identifier": null,
      "location": SourceLocation {
        "end": Position {
          "column": 3,
          "line": 14,
        },
        "start": Position {
          "column": 2,
          "line": 12,
        },
      },
      "name": "doThing",
      "parameterNames": Array [],
    },
    Object {
      "identifier": null,
      "location": SourceLocation {
        "end": Position {
          "column": 3,
          "line": 17,
        },
        "start": Position {
          "column": 16,
          "line": 15,
        },
      },
      "name": "doOtherThing",
      "parameterNames": Array [],
    },
    Object {
      "identifier": null,
      "location": SourceLocation {
        "end": Position {
          "column": 23,
          "line": 20,
        },
        "start": Position {
          "column": 15,
          "line": 20,
        },
      },
      "name": "property",
      "parameterNames": Array [],
    },
    Object {
      "identifier": null,
      "location": SourceLocation {
        "end": Position {
          "column": 3,
          "line": 26,
        },
        "start": Position {
          "column": 2,
          "line": 24,
        },
      },
      "name": "constructor",
      "parameterNames": Array [],
    },
    Object {
      "identifier": null,
      "location": SourceLocation {
        "end": Position {
          "column": 3,
          "line": 30,
        },
        "start": Position {
          "column": 2,
          "line": 28,
        },
      },
      "name": "beAwesome",
      "parameterNames": Array [
        "person",
      ],
    },
  ],
  "identifiers": Array [
    Object {
      "expression": "TIME",
      "location": Object {
        "end": Position {
          "column": 15,
          "line": 1,
        },
        "start": Position {
          "column": 6,
          "line": 1,
        },
      },
      "name": "TIME",
    },
    Object {
      "expression": "TIME",
      "location": Object {
        "end": Position {
          "column": 10,
          "line": 1,
        },
        "start": Position {
          "column": 6,
          "line": 1,
        },
      },
      "name": "TIME",
    },
    Object {
      "expression": "count",
      "location": Object {
        "end": Position {
          "column": 13,
          "line": 2,
        },
        "start": Position {
          "column": 4,
          "line": 2,
        },
      },
      "name": "count",
    },
    Object {
      "expression": "count",
      "location": Object {
        "end": Position {
          "column": 9,
          "line": 2,
        },
        "start": Position {
          "column": 4,
          "line": 2,
        },
      },
      "name": "count",
    },
    Object {
      "expression": "incrementCounter",
      "location": Object {
        "end": Position {
          "column": 25,
          "line": 4,
        },
        "start": Position {
          "column": 9,
          "line": 4,
        },
      },
      "name": "incrementCounter",
    },
    Object {
      "expression": "counter",
      "location": Object {
        "end": Position {
          "column": 33,
          "line": 4,
        },
        "start": Position {
          "column": 26,
          "line": 4,
        },
      },
      "name": "counter",
    },
    Object {
      "expression": "counter",
      "location": Object {
        "end": Position {
          "column": 16,
          "line": 5,
        },
        "start": Position {
          "column": 9,
          "line": 5,
        },
      },
      "name": "counter",
    },
    Object {
      "expression": "sum",
      "location": Object {
        "end": Position {
          "column": 27,
          "line": 8,
        },
        "start": Position {
          "column": 6,
          "line": 8,
        },
      },
      "name": "sum",
    },
    Object {
      "expression": "sum",
      "location": Object {
        "end": Position {
          "column": 9,
          "line": 8,
        },
        "start": Position {
          "column": 6,
          "line": 8,
        },
      },
      "name": "sum",
    },
    Object {
      "expression": "a",
      "location": Object {
        "end": Position {
          "column": 14,
          "line": 8,
        },
        "start": Position {
          "column": 13,
          "line": 8,
        },
      },
      "name": "a",
    },
    Object {
      "expression": "b",
      "location": Object {
        "end": Position {
          "column": 17,
          "line": 8,
        },
        "start": Position {
          "column": 16,
          "line": 8,
        },
      },
      "name": "b",
    },
    Object {
      "expression": "a",
      "location": Object {
        "end": Position {
          "column": 23,
          "line": 8,
        },
        "start": Position {
          "column": 22,
          "line": 8,
        },
      },
      "name": "a",
    },
    Object {
      "expression": "b",
      "location": Object {
        "end": Position {
          "column": 27,
          "line": 8,
        },
        "start": Position {
          "column": 26,
          "line": 8,
        },
      },
      "name": "b",
    },
    Object {
      "expression": "Obj",
      "location": Object {
        "end": Position {
          "column": 1,
          "line": 18,
        },
        "start": Position {
          "column": 6,
          "line": 10,
        },
      },
      "name": "Obj",
    },
    Object {
      "expression": "Obj",
      "location": Object {
        "end": Position {
          "column": 9,
          "line": 10,
        },
        "start": Position {
          "column": 6,
          "line": 10,
        },
      },
      "name": "Obj",
    },
    Object {
      "expression": "foo",
      "location": Object {
        "end": Position {
          "column": 5,
          "line": 11,
        },
        "start": Position {
          "column": 2,
          "line": 11,
        },
      },
      "name": "foo",
    },
    Object {
      "expression": "doThing",
      "location": Object {
        "end": Position {
          "column": 9,
          "line": 12,
        },
        "start": Position {
          "column": 2,
          "line": 12,
        },
      },
      "name": "doThing",
    },
    Object {
      "expression": "console",
      "location": Object {
        "end": Position {
          "column": 11,
          "line": 13,
        },
        "start": Position {
          "column": 4,
          "line": 13,
        },
      },
      "name": "console",
    },
    Object {
      "expression": "log",
      "location": Object {
        "end": Position {
          "column": 15,
          "line": 13,
        },
        "start": Position {
          "column": 12,
          "line": 13,
        },
      },
      "name": "log",
    },
    Object {
      "expression": "doOtherThing",
      "location": Object {
        "end": Position {
          "column": 14,
          "line": 15,
        },
        "start": Position {
          "column": 2,
          "line": 15,
        },
      },
      "name": "doOtherThing",
    },
    Object {
      "expression": "Obj",
      "location": Object {
        "end": Position {
          "column": 3,
          "line": 20,
        },
        "start": Position {
          "column": 0,
          "line": 20,
        },
      },
      "name": "Obj",
    },
    Object {
      "expression": "property",
      "location": Object {
        "end": Position {
          "column": 12,
          "line": 20,
        },
        "start": Position {
          "column": 4,
          "line": 20,
        },
      },
      "name": "property",
    },
    Object {
      "expression": "Obj",
      "location": Object {
        "end": Position {
          "column": 3,
          "line": 21,
        },
        "start": Position {
          "column": 0,
          "line": 21,
        },
      },
      "name": "Obj",
    },
    Object {
      "expression": "otherProperty",
      "location": Object {
        "end": Position {
          "column": 17,
          "line": 21,
        },
        "start": Position {
          "column": 4,
          "line": 21,
        },
      },
      "name": "otherProperty",
    },
    Object {
      "expression": "Ultra",
      "location": Object {
        "end": Position {
          "column": 11,
          "line": 23,
        },
        "start": Position {
          "column": 6,
          "line": 23,
        },
      },
      "name": "Ultra",
    },
    Object {
      "expression": "constructor",
      "location": Object {
        "end": Position {
          "column": 13,
          "line": 24,
        },
        "start": Position {
          "column": 2,
          "line": 24,
        },
      },
      "name": "constructor",
    },
    Object {
      "expression": "awesome",
      "location": Object {
        "end": Position {
          "column": 16,
          "line": 25,
        },
        "start": Position {
          "column": 9,
          "line": 25,
        },
      },
      "name": "awesome",
    },
    Object {
      "expression": "beAwesome",
      "location": Object {
        "end": Position {
          "column": 11,
          "line": 28,
        },
        "start": Position {
          "column": 2,
          "line": 28,
        },
      },
      "name": "beAwesome",
    },
    Object {
      "expression": "person",
      "location": Object {
        "end": Position {
          "column": 18,
          "line": 28,
        },
        "start": Position {
          "column": 12,
          "line": 28,
        },
      },
      "name": "person",
    },
    Object {
      "expression": "console",
      "location": Object {
        "end": Position {
          "column": 11,
          "line": 29,
        },
        "start": Position {
          "column": 4,
          "line": 29,
        },
      },
      "name": "console",
    },
    Object {
      "expression": "log",
      "location": Object {
        "end": Position {
          "column": 15,
          "line": 29,
        },
        "start": Position {
          "column": 12,
          "line": 29,
        },
      },
      "name": "log",
    },
    Object {
      "expression": "person",
      "location": Object {
        "end": Position {
          "column": 25,
          "line": 29,
        },
        "start": Position {
          "column": 19,
          "line": 29,
        },
      },
      "name": "person",
    },
  ],
  "memberExpressions": Array [
    Object {
      "expression": "console.log",
      "expressionLocation": SourceLocation {
        "end": Position {
          "column": 15,
          "line": 13,
        },
        "start": Position {
          "column": 4,
          "line": 13,
        },
      },
      "location": Object {
        "end": Position {
          "column": 15,
          "line": 13,
        },
        "start": Position {
          "column": 12,
          "line": 13,
        },
      },
      "name": "log",
    },
    Object {
      "expression": "Obj.property",
      "expressionLocation": SourceLocation {
        "end": Position {
          "column": 12,
          "line": 20,
        },
        "start": Position {
          "column": 0,
          "line": 20,
        },
      },
      "location": Object {
        "end": Position {
          "column": 12,
          "line": 20,
        },
        "start": Position {
          "column": 4,
          "line": 20,
        },
      },
      "name": "property",
    },
    Object {
      "expression": "Obj.otherProperty",
      "expressionLocation": SourceLocation {
        "end": Position {
          "column": 17,
          "line": 21,
        },
        "start": Position {
          "column": 0,
          "line": 21,
        },
      },
      "location": Object {
        "end": Position {
          "column": 17,
          "line": 21,
        },
        "start": Position {
          "column": 4,
          "line": 21,
        },
      },
      "name": "otherProperty",
    },
    Object {
      "expression": "this.awesome",
      "expressionLocation": SourceLocation {
        "end": Position {
          "column": 16,
          "line": 25,
        },
        "start": Position {
          "column": 4,
          "line": 25,
        },
      },
      "location": Object {
        "end": Position {
          "column": 16,
          "line": 25,
        },
        "start": Position {
          "column": 9,
          "line": 25,
        },
      },
      "name": "awesome",
    },
    Object {
      "expression": "console.log",
      "expressionLocation": SourceLocation {
        "end": Position {
          "column": 15,
          "line": 29,
        },
        "start": Position {
          "column": 4,
          "line": 29,
        },
      },
      "location": Object {
        "end": Position {
          "column": 15,
          "line": 29,
        },
        "start": Position {
          "column": 12,
          "line": 29,
        },
      },
      "name": "log",
    },
  ],
  "objectProperties": Array [
    Object {
      "expression": "Obj.foo",
      "location": Object {
        "end": Position {
          "column": 5,
          "line": 11,
        },
        "start": Position {
          "column": 2,
          "line": 11,
        },
      },
      "name": "foo",
    },
    Object {
      "expression": "Obj.doOtherThing",
      "location": Object {
        "end": Position {
          "column": 14,
          "line": 15,
        },
        "start": Position {
          "column": 2,
          "line": 15,
        },
      },
      "name": "doOtherThing",
    },
  ],
  "variables": Array [
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 15,
          "line": 1,
        },
        "start": Position {
          "column": 6,
          "line": 1,
        },
      },
      "name": "TIME",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 13,
          "line": 2,
        },
        "start": Position {
          "column": 4,
          "line": 2,
        },
      },
      "name": "count",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 33,
          "line": 4,
        },
        "identifierName": "counter",
        "start": Position {
          "column": 26,
          "line": 4,
        },
      },
      "name": "counter",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 27,
          "line": 8,
        },
        "start": Position {
          "column": 6,
          "line": 8,
        },
      },
      "name": "sum",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 14,
          "line": 8,
        },
        "identifierName": "a",
        "start": Position {
          "column": 13,
          "line": 8,
        },
      },
      "name": "a",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 17,
          "line": 8,
        },
        "identifierName": "b",
        "start": Position {
          "column": 16,
          "line": 8,
        },
      },
      "name": "b",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 1,
          "line": 18,
        },
        "start": Position {
          "column": 6,
          "line": 10,
        },
      },
      "name": "Obj",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 8,
          "line": 11,
        },
        "start": Position {
          "column": 2,
          "line": 11,
        },
      },
      "name": "foo",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 1,
          "line": 31,
        },
        "start": Position {
          "column": 0,
          "line": 23,
        },
      },
      "name": "Ultra",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 18,
          "line": 28,
        },
        "identifierName": "person",
        "start": Position {
          "column": 12,
          "line": 28,
        },
      },
      "name": "person",
    },
  ],
}
`;

exports[`Parser.getSymbols class 1`] = `
Object {
  "functions": Array [
    Object {
      "identifier": null,
      "location": SourceLocation {
        "end": Position {
          "column": 3,
          "line": 4,
        },
        "start": Position {
          "column": 2,
          "line": 2,
        },
      },
      "name": "constructor",
      "parameterNames": Array [],
    },
    Object {
      "identifier": null,
      "location": SourceLocation {
        "end": Position {
          "column": 3,
          "line": 8,
        },
        "start": Position {
          "column": 2,
          "line": 6,
        },
      },
      "name": "bar",
      "parameterNames": Array [
        "a",
      ],
    },
  ],
  "identifiers": Array [
    Object {
      "expression": "Test",
      "location": Object {
        "end": Position {
          "column": 10,
          "line": 1,
        },
        "start": Position {
          "column": 6,
          "line": 1,
        },
      },
      "name": "Test",
    },
    Object {
      "expression": "constructor",
      "location": Object {
        "end": Position {
          "column": 13,
          "line": 2,
        },
        "start": Position {
          "column": 2,
          "line": 2,
        },
      },
      "name": "constructor",
    },
    Object {
      "expression": "foo",
      "location": Object {
        "end": Position {
          "column": 12,
          "line": 3,
        },
        "start": Position {
          "column": 9,
          "line": 3,
        },
      },
      "name": "foo",
    },
    Object {
      "expression": "bar",
      "location": Object {
        "end": Position {
          "column": 5,
          "line": 6,
        },
        "start": Position {
          "column": 2,
          "line": 6,
        },
      },
      "name": "bar",
    },
    Object {
      "expression": "a",
      "location": Object {
        "end": Position {
          "column": 7,
          "line": 6,
        },
        "start": Position {
          "column": 6,
          "line": 6,
        },
      },
      "name": "a",
    },
    Object {
      "expression": "console",
      "location": Object {
        "end": Position {
          "column": 11,
          "line": 7,
        },
        "start": Position {
          "column": 4,
          "line": 7,
        },
      },
      "name": "console",
    },
    Object {
      "expression": "log",
      "location": Object {
        "end": Position {
          "column": 15,
          "line": 7,
        },
        "start": Position {
          "column": 12,
          "line": 7,
        },
      },
      "name": "log",
    },
    Object {
      "expression": "a",
      "location": Object {
        "end": Position {
          "column": 24,
          "line": 7,
        },
        "start": Position {
          "column": 23,
          "line": 7,
        },
      },
      "name": "a",
    },
    Object {
      "expression": "Test2",
      "location": Object {
        "end": Position {
          "column": 11,
          "line": 11,
        },
        "start": Position {
          "column": 6,
          "line": 11,
        },
      },
      "name": "Test2",
    },
    Object {
      "expression": "expressiveClass",
      "location": Object {
        "end": Position {
          "column": 30,
          "line": 13,
        },
        "start": Position {
          "column": 4,
          "line": 13,
        },
      },
      "name": "expressiveClass",
    },
    Object {
      "expression": "expressiveClass",
      "location": Object {
        "end": Position {
          "column": 19,
          "line": 13,
        },
        "start": Position {
          "column": 4,
          "line": 13,
        },
      },
      "name": "expressiveClass",
    },
  ],
  "memberExpressions": Array [
    Object {
      "expression": "this.foo",
      "expressionLocation": SourceLocation {
        "end": Position {
          "column": 12,
          "line": 3,
        },
        "start": Position {
          "column": 4,
          "line": 3,
        },
      },
      "location": Object {
        "end": Position {
          "column": 12,
          "line": 3,
        },
        "start": Position {
          "column": 9,
          "line": 3,
        },
      },
      "name": "foo",
    },
    Object {
      "expression": "console.log",
      "expressionLocation": SourceLocation {
        "end": Position {
          "column": 15,
          "line": 7,
        },
        "start": Position {
          "column": 4,
          "line": 7,
        },
      },
      "location": Object {
        "end": Position {
          "column": 15,
          "line": 7,
        },
        "start": Position {
          "column": 12,
          "line": 7,
        },
      },
      "name": "log",
    },
  ],
  "objectProperties": Array [],
  "variables": Array [
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 1,
          "line": 9,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "name": "Test",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 7,
          "line": 6,
        },
        "identifierName": "a",
        "start": Position {
          "column": 6,
          "line": 6,
        },
      },
      "name": "a",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 14,
          "line": 11,
        },
        "start": Position {
          "column": 0,
          "line": 11,
        },
      },
      "name": "Test2",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 30,
          "line": 13,
        },
        "start": Position {
          "column": 4,
          "line": 13,
        },
      },
      "name": "expressiveClass",
    },
  ],
}
`;

exports[`Parser.getSymbols expression 1`] = `
"properties
[(1, 14), (1, 15)]  obj.a a 
[(1, 19), (1, 20)]  obj.a.b b 
[(5, 15), (5, 16)]  com[a] a 
[(5, 21), (5, 22)]  com[a].b b 
[(5, 30), (5, 31)]  com[a][d] d 
[(5, 42), (5, 43)]  com[b] b 
[(8, 2), (8, 8)]   render 
[(12, 12), (12, 13)]  obj.foo.a a 
[(12, 17), (12, 18)]  obj.foo.a.b b 
[(12, 27), (12, 28)]  obj.foo.b b 
[(13, 8), (13, 9)]  com.a a 
[(13, 13), (13, 14)]  com.a.b b 
[(13, 23), (13, 24)]  com.b b 
[(16, 15), (16, 16)]  res[0].a a 
[(16, 25), (16, 26)]  res[1].b b 
[(17, 15), (17, 16)]  res2.a a 
[(17, 21), (17, 22)]  res2.a[0].b b 
[(18, 15), (18, 16)]  res3.a a 
[(18, 21), (18, 22)]  res3.a[0].b b 
[(18, 30), (18, 31)]  res3.b b 
[(18, 36), (18, 37)]  res3.b[0].c c 
[(19, 17), (19, 18)]  res4[0].a a 
[(19, 29), (19, 30)]  res4[0].b b 
[(22, 8), (22, 9)]  b b 
[(22, 11), (22, 16)]  resty resty 
[(25, 18), (25, 19)]  a a 
[(25, 21), (25, 22)]  b b 
[(26, 22), (26, 23)]  a a 
[(26, 25), (26, 26)]  b b 
member expressions
[(2, 19), (2, 33)] [(2, 12), (2, 33)] obj2.c.secondProperty secondProperty 
[(2, 17), (2, 18)] [(2, 12), (2, 18)] obj2.c c 
[(7, 4), (7, 12)] [(7, 0), (7, 12)] app.TodoView TodoView 
[(7, 24), (7, 30)] [(7, 15), (7, 30)] Backbone.extend extend 
[(12, 4), (12, 7)] [(12, 0), (12, 7)] obj.foo foo 
[(19, 40), (19, 41)] [(19, 32), (19, 41)] a.b.c.v.d d 
[(19, 38), (19, 39)] [(19, 32), (19, 39)] a.b.c.v v 
[(19, 36), (19, 37)] [(19, 32), (19, 37)] a.b.c c 
[(19, 34), (19, 35)] [(19, 32), (19, 35)] a.b b 
[(27, 29), (27, 43)] [(27, 13), (27, 43)]  secondProperty 
[(27, 27), (27, 28)] [(27, 13), (27, 28)]  c 
[(27, 18), (27, 24)] [(27, 13), (27, 24)] obj2.doEvil doEvil 
identifiers
[(1, 6), (1, 27)]  obj obj 
[(1, 6), (1, 9)]  obj obj 
[(1, 14), (1, 15)]  a a 
[(1, 19), (1, 20)]  b b 
[(2, 6), (2, 33)]  foo foo 
[(2, 6), (2, 9)]  foo foo 
[(2, 12), (2, 16)]  obj2 obj2 
[(2, 17), (2, 18)]  c c 
[(2, 19), (2, 33)]  secondProperty secondProperty 
[(5, 6), (5, 49)]  com com 
[(5, 6), (5, 9)]  com com 
[(5, 15), (5, 16)]  a a 
[(5, 21), (5, 22)]  b b 
[(5, 30), (5, 31)]  d d 
[(5, 42), (5, 43)]  b b 
[(7, 0), (7, 3)]  app app 
[(7, 4), (7, 12)]  TodoView TodoView 
[(7, 15), (7, 23)]  Backbone Backbone 
[(7, 24), (7, 30)]  extend extend 
[(8, 2), (8, 8)]  render render 
[(12, 0), (12, 3)]  obj obj 
[(12, 4), (12, 7)]  foo foo 
[(12, 12), (12, 13)]  a a 
[(12, 17), (12, 18)]  b b 
[(12, 27), (12, 28)]  b b 
[(13, 0), (13, 3)]  com com 
[(13, 8), (13, 9)]  a a 
[(13, 13), (13, 14)]  b b 
[(13, 23), (13, 24)]  b b 
[(16, 6), (16, 32)]  res res 
[(16, 6), (16, 9)]  res res 
[(16, 15), (16, 16)]  a a 
[(16, 25), (16, 26)]  b b 
[(17, 6), (17, 30)]  res2 res2 
[(17, 6), (17, 10)]  res2 res2 
[(17, 15), (17, 16)]  a a 
[(17, 21), (17, 22)]  b b 
[(18, 6), (18, 45)]  res3 res3 
[(18, 6), (18, 10)]  res3 res3 
[(18, 15), (18, 16)]  a a 
[(18, 21), (18, 22)]  b b 
[(18, 30), (18, 31)]  b b 
[(18, 36), (18, 37)]  c c 
[(19, 6), (19, 45)]  res4 res4 
[(19, 6), (19, 10)]  res4 res4 
[(19, 17), (19, 18)]  a a 
[(19, 29), (19, 30)]  b b 
[(19, 32), (19, 33)]  a a 
[(19, 34), (19, 35)]  b b 
[(19, 36), (19, 37)]  c c 
[(19, 38), (19, 39)]  v v 
[(19, 40), (19, 41)]  d d 
[(22, 6), (22, 35)]   undefined 
[(22, 8), (22, 9)]  b b 
[(22, 8), (22, 9)]  b b 
[(22, 11), (22, 16)]  resty resty 
[(22, 11), (22, 16)]  resty resty 
[(22, 21), (22, 28)]  compute compute 
[(22, 29), (22, 34)]  stuff stuff 
[(23, 6), (23, 35)]   undefined 
[(23, 7), (23, 8)]  a a 
[(23, 13), (23, 17)]  rest rest 
[(23, 21), (23, 28)]  compute compute 
[(23, 29), (23, 34)]  stuff stuff 
[(25, 9), (25, 15)]  params params 
[(25, 18), (25, 19)]  a a 
[(25, 18), (25, 19)]  a a 
[(25, 21), (25, 22)]  b b 
[(25, 21), (25, 22)]  b b 
[(26, 4), (26, 32)]  pars pars 
[(26, 4), (26, 8)]  pars pars 
[(26, 22), (26, 23)]  a a 
[(26, 22), (26, 23)]  a a 
[(26, 25), (26, 26)]  b b 
[(26, 25), (26, 26)]  b b 
[(27, 6), (27, 43)]  evil evil 
[(27, 6), (27, 10)]  evil evil 
[(27, 13), (27, 17)]  obj2 obj2 
[(27, 18), (27, 24)]  doEvil doEvil 
[(27, 27), (27, 28)]  c c 
[(27, 29), (27, 43)]  secondProperty secondProperty 
variables
[(1, 6), (1, 27)]   obj 
[(1, 14), (1, 25)]   a 
[(1, 19), (1, 23)]   b 
[(2, 6), (2, 33)]   foo 
[(5, 6), (5, 49)]   com 
[(5, 14), (5, 39)]   a 
[(5, 21), (5, 27)]   b 
[(5, 29), (5, 37)]   d 
[(5, 41), (5, 47)]   b 
[(12, 12), (12, 25)]   a 
[(12, 17), (12, 23)]   b 
[(12, 27), (12, 31)]   b 
[(13, 8), (13, 21)]   a 
[(13, 13), (13, 19)]   b 
[(13, 23), (13, 27)]   b 
[(16, 6), (16, 32)]   res 
[(16, 15), (16, 19)]   a 
[(16, 25), (16, 29)]   b 
[(17, 6), (17, 30)]   res2 
[(17, 15), (17, 28)]   a 
[(17, 21), (17, 25)]   b 
[(18, 6), (18, 45)]   res3 
[(18, 15), (18, 28)]   a 
[(18, 21), (18, 25)]   b 
[(18, 30), (18, 43)]   b 
[(18, 36), (18, 40)]   c 
[(19, 6), (19, 45)]   res4 
[(19, 17), (19, 21)]   a 
[(19, 29), (19, 41)]   b 
[(22, 6), (22, 35)]   undefined 
[(22, 8), (22, 9)]   b 
[(22, 11), (22, 16)]   resty 
[(23, 6), (23, 35)]   undefined 
[(25, 16), (25, 24)]   undefined 
[(25, 18), (25, 19)]   a 
[(25, 21), (25, 22)]   b 
[(26, 4), (26, 32)]   pars 
[(26, 20), (26, 28)]   undefined 
[(26, 22), (26, 23)]   a 
[(26, 25), (26, 26)]   b 
[(27, 6), (27, 43)]   evil "
`;

exports[`Parser.getSymbols finds symbols in an html file 1`] = `
Object {
  "functions": Array [
    Object {
      "identifier": Node {
        "end": 116,
        "loc": SourceLocation {
          "end": Position {
            "column": 19,
            "line": 8,
          },
          "identifierName": "sayHello",
          "start": Position {
            "column": 11,
            "line": 8,
          },
        },
        "name": "sayHello",
        "start": 108,
        "type": "Identifier",
      },
      "location": SourceLocation {
        "end": Position {
          "column": 3,
          "line": 10,
        },
        "start": Position {
          "column": 2,
          "line": 8,
        },
      },
      "name": "sayHello",
      "parameterNames": Array [
        "name",
      ],
    },
    Object {
      "identifier": null,
      "location": SourceLocation {
        "end": Position {
          "column": 3,
          "line": 24,
        },
        "start": Position {
          "column": 21,
          "line": 22,
        },
      },
      "name": "capitalize",
      "parameterNames": Array [
        "name",
      ],
    },
    Object {
      "identifier": Node {
        "end": 27,
        "loc": SourceLocation {
          "end": Position {
            "column": 16,
            "line": 36,
          },
          "identifierName": "iife",
          "start": Position {
            "column": 12,
            "line": 36,
          },
        },
        "name": "iife",
        "start": 23,
        "type": "Identifier",
      },
      "location": SourceLocation {
        "end": Position {
          "column": 3,
          "line": 39,
        },
        "start": Position {
          "column": 3,
          "line": 36,
        },
      },
      "name": "iife",
      "parameterNames": Array [],
    },
  ],
  "identifiers": Array [
    Object {
      "expression": "globalObject",
      "location": Object {
        "end": Position {
          "column": 3,
          "line": 7,
        },
        "start": Position {
          "column": 6,
          "line": 4,
        },
      },
      "name": "globalObject",
    },
    Object {
      "expression": "globalObject",
      "location": Object {
        "end": Position {
          "column": 18,
          "line": 4,
        },
        "start": Position {
          "column": 6,
          "line": 4,
        },
      },
      "name": "globalObject",
    },
    Object {
      "expression": "first",
      "location": Object {
        "end": Position {
          "column": 8,
          "line": 5,
        },
        "start": Position {
          "column": 3,
          "line": 5,
        },
      },
      "name": "first",
    },
    Object {
      "expression": "last",
      "location": Object {
        "end": Position {
          "column": 7,
          "line": 6,
        },
        "start": Position {
          "column": 3,
          "line": 6,
        },
      },
      "name": "last",
    },
    Object {
      "expression": "sayHello",
      "location": Object {
        "end": Position {
          "column": 19,
          "line": 8,
        },
        "start": Position {
          "column": 11,
          "line": 8,
        },
      },
      "name": "sayHello",
    },
    Object {
      "expression": "name",
      "location": Object {
        "end": Position {
          "column": 25,
          "line": 8,
        },
        "start": Position {
          "column": 21,
          "line": 8,
        },
      },
      "name": "name",
    },
    Object {
      "expression": "name",
      "location": Object {
        "end": Position {
          "column": 24,
          "line": 9,
        },
        "start": Position {
          "column": 20,
          "line": 9,
        },
      },
      "name": "name",
    },
    Object {
      "expression": "capitalize",
      "location": Object {
        "end": Position {
          "column": 3,
          "line": 24,
        },
        "start": Position {
          "column": 8,
          "line": 22,
        },
      },
      "name": "capitalize",
    },
    Object {
      "expression": "capitalize",
      "location": Object {
        "end": Position {
          "column": 18,
          "line": 22,
        },
        "start": Position {
          "column": 8,
          "line": 22,
        },
      },
      "name": "capitalize",
    },
    Object {
      "expression": "name",
      "location": Object {
        "end": Position {
          "column": 25,
          "line": 22,
        },
        "start": Position {
          "column": 21,
          "line": 22,
        },
      },
      "name": "name",
    },
    Object {
      "expression": "name",
      "location": Object {
        "end": Position {
          "column": 14,
          "line": 23,
        },
        "start": Position {
          "column": 10,
          "line": 23,
        },
      },
      "name": "name",
    },
    Object {
      "expression": "toUpperCase",
      "location": Object {
        "end": Position {
          "column": 29,
          "line": 23,
        },
        "start": Position {
          "column": 18,
          "line": 23,
        },
      },
      "name": "toUpperCase",
    },
    Object {
      "expression": "name",
      "location": Object {
        "end": Position {
          "column": 38,
          "line": 23,
        },
        "start": Position {
          "column": 34,
          "line": 23,
        },
      },
      "name": "name",
    },
    Object {
      "expression": "substring",
      "location": Object {
        "end": Position {
          "column": 48,
          "line": 23,
        },
        "start": Position {
          "column": 39,
          "line": 23,
        },
      },
      "name": "substring",
    },
    Object {
      "expression": "greetAll",
      "location": Object {
        "end": Position {
          "column": 14,
          "line": 28,
        },
        "start": Position {
          "column": 8,
          "line": 25,
        },
      },
      "name": "greetAll",
    },
    Object {
      "expression": "greetAll",
      "location": Object {
        "end": Position {
          "column": 16,
          "line": 25,
        },
        "start": Position {
          "column": 8,
          "line": 25,
        },
      },
      "name": "greetAll",
    },
    Object {
      "expression": "map",
      "location": Object {
        "end": Position {
          "column": 7,
          "line": 26,
        },
        "start": Position {
          "column": 4,
          "line": 26,
        },
      },
      "name": "map",
    },
    Object {
      "expression": "capitalize",
      "location": Object {
        "end": Position {
          "column": 18,
          "line": 26,
        },
        "start": Position {
          "column": 8,
          "line": 26,
        },
      },
      "name": "capitalize",
    },
    Object {
      "expression": "map",
      "location": Object {
        "end": Position {
          "column": 7,
          "line": 27,
        },
        "start": Position {
          "column": 4,
          "line": 27,
        },
      },
      "name": "map",
    },
    Object {
      "expression": "sayHello",
      "location": Object {
        "end": Position {
          "column": 16,
          "line": 27,
        },
        "start": Position {
          "column": 8,
          "line": 27,
        },
      },
      "name": "sayHello",
    },
    Object {
      "expression": "join",
      "location": Object {
        "end": Position {
          "column": 8,
          "line": 28,
        },
        "start": Position {
          "column": 4,
          "line": 28,
        },
      },
      "name": "join",
    },
    Object {
      "expression": "globalObject",
      "location": Object {
        "end": Position {
          "column": 14,
          "line": 30,
        },
        "start": Position {
          "column": 2,
          "line": 30,
        },
      },
      "name": "globalObject",
    },
    Object {
      "expression": "greetings",
      "location": Object {
        "end": Position {
          "column": 24,
          "line": 30,
        },
        "start": Position {
          "column": 15,
          "line": 30,
        },
      },
      "name": "greetings",
    },
    Object {
      "expression": "greetAll",
      "location": Object {
        "end": Position {
          "column": 35,
          "line": 30,
        },
        "start": Position {
          "column": 27,
          "line": 30,
        },
      },
      "name": "greetAll",
    },
    Object {
      "expression": "iife",
      "location": Object {
        "end": Position {
          "column": 16,
          "line": 36,
        },
        "start": Position {
          "column": 12,
          "line": 36,
        },
      },
      "name": "iife",
    },
    Object {
      "expression": "greeting",
      "location": Object {
        "end": Position {
          "column": 36,
          "line": 37,
        },
        "start": Position {
          "column": 9,
          "line": 37,
        },
      },
      "name": "greeting",
    },
    Object {
      "expression": "greeting",
      "location": Object {
        "end": Position {
          "column": 17,
          "line": 37,
        },
        "start": Position {
          "column": 9,
          "line": 37,
        },
      },
      "name": "greeting",
    },
    Object {
      "expression": "sayHello",
      "location": Object {
        "end": Position {
          "column": 28,
          "line": 37,
        },
        "start": Position {
          "column": 20,
          "line": 37,
        },
      },
      "name": "sayHello",
    },
    Object {
      "expression": "console",
      "location": Object {
        "end": Position {
          "column": 10,
          "line": 38,
        },
        "start": Position {
          "column": 3,
          "line": 38,
        },
      },
      "name": "console",
    },
    Object {
      "expression": "log",
      "location": Object {
        "end": Position {
          "column": 14,
          "line": 38,
        },
        "start": Position {
          "column": 11,
          "line": 38,
        },
      },
      "name": "log",
    },
    Object {
      "expression": "greeting",
      "location": Object {
        "end": Position {
          "column": 23,
          "line": 38,
        },
        "start": Position {
          "column": 15,
          "line": 38,
        },
      },
      "name": "greeting",
    },
  ],
  "memberExpressions": Array [
    Object {
      "expression": "name.undefined.toUpperCase",
      "expressionLocation": SourceLocation {
        "end": Position {
          "column": 29,
          "line": 23,
        },
        "start": Position {
          "column": 10,
          "line": 23,
        },
      },
      "location": Object {
        "end": Position {
          "column": 29,
          "line": 23,
        },
        "start": Position {
          "column": 18,
          "line": 23,
        },
      },
      "name": "toUpperCase",
    },
    Object {
      "expression": "name.",
      "expressionLocation": SourceLocation {
        "end": Position {
          "column": 17,
          "line": 23,
        },
        "start": Position {
          "column": 10,
          "line": 23,
        },
      },
      "location": Object {
        "end": Position {
          "column": 16,
          "line": 23,
        },
        "start": Position {
          "column": 15,
          "line": 23,
        },
      },
      "name": undefined,
    },
    Object {
      "expression": "name.substring",
      "expressionLocation": SourceLocation {
        "end": Position {
          "column": 48,
          "line": 23,
        },
        "start": Position {
          "column": 34,
          "line": 23,
        },
      },
      "location": Object {
        "end": Position {
          "column": 48,
          "line": 23,
        },
        "start": Position {
          "column": 39,
          "line": 23,
        },
      },
      "name": "substring",
    },
    Object {
      "expression": "",
      "expressionLocation": SourceLocation {
        "end": Position {
          "column": 8,
          "line": 28,
        },
        "start": Position {
          "column": 19,
          "line": 25,
        },
      },
      "location": Object {
        "end": Position {
          "column": 8,
          "line": 28,
        },
        "start": Position {
          "column": 4,
          "line": 28,
        },
      },
      "name": "join",
    },
    Object {
      "expression": "",
      "expressionLocation": SourceLocation {
        "end": Position {
          "column": 7,
          "line": 27,
        },
        "start": Position {
          "column": 19,
          "line": 25,
        },
      },
      "location": Object {
        "end": Position {
          "column": 7,
          "line": 27,
        },
        "start": Position {
          "column": 4,
          "line": 27,
        },
      },
      "name": "map",
    },
    Object {
      "expression": "map",
      "expressionLocation": SourceLocation {
        "end": Position {
          "column": 7,
          "line": 26,
        },
        "start": Position {
          "column": 19,
          "line": 25,
        },
      },
      "location": Object {
        "end": Position {
          "column": 7,
          "line": 26,
        },
        "start": Position {
          "column": 4,
          "line": 26,
        },
      },
      "name": "map",
    },
    Object {
      "expression": "globalObject.greetings",
      "expressionLocation": SourceLocation {
        "end": Position {
          "column": 24,
          "line": 30,
        },
        "start": Position {
          "column": 2,
          "line": 30,
        },
      },
      "location": Object {
        "end": Position {
          "column": 24,
          "line": 30,
        },
        "start": Position {
          "column": 15,
          "line": 30,
        },
      },
      "name": "greetings",
    },
    Object {
      "expression": "console.log",
      "expressionLocation": SourceLocation {
        "end": Position {
          "column": 14,
          "line": 38,
        },
        "start": Position {
          "column": 3,
          "line": 38,
        },
      },
      "location": Object {
        "end": Position {
          "column": 14,
          "line": 38,
        },
        "start": Position {
          "column": 11,
          "line": 38,
        },
      },
      "name": "log",
    },
  ],
  "objectProperties": Array [
    Object {
      "expression": "globalObject.first",
      "location": Object {
        "end": Position {
          "column": 8,
          "line": 5,
        },
        "start": Position {
          "column": 3,
          "line": 5,
        },
      },
      "name": "first",
    },
    Object {
      "expression": "globalObject.last",
      "location": Object {
        "end": Position {
          "column": 7,
          "line": 6,
        },
        "start": Position {
          "column": 3,
          "line": 6,
        },
      },
      "name": "last",
    },
  ],
  "variables": Array [
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 3,
          "line": 7,
        },
        "start": Position {
          "column": 6,
          "line": 4,
        },
      },
      "name": "globalObject",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 16,
          "line": 5,
        },
        "start": Position {
          "column": 3,
          "line": 5,
        },
      },
      "name": "first",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 16,
          "line": 6,
        },
        "start": Position {
          "column": 3,
          "line": 6,
        },
      },
      "name": "last",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 25,
          "line": 8,
        },
        "identifierName": "name",
        "start": Position {
          "column": 21,
          "line": 8,
        },
      },
      "name": "name",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 3,
          "line": 24,
        },
        "start": Position {
          "column": 8,
          "line": 22,
        },
      },
      "name": "capitalize",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 25,
          "line": 22,
        },
        "identifierName": "name",
        "start": Position {
          "column": 21,
          "line": 22,
        },
      },
      "name": "name",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 14,
          "line": 28,
        },
        "start": Position {
          "column": 8,
          "line": 25,
        },
      },
      "name": "greetAll",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 36,
          "line": 37,
        },
        "start": Position {
          "column": 9,
          "line": 37,
        },
      },
      "name": "greeting",
    },
  ],
}
`;

exports[`Parser.getSymbols func 1`] = `
Object {
  "functions": Array [
    Object {
      "identifier": Node {
        "end": 15,
        "loc": SourceLocation {
          "end": Position {
            "column": 15,
            "line": 1,
          },
          "identifierName": "square",
          "start": Position {
            "column": 9,
            "line": 1,
          },
        },
        "name": "square",
        "start": 9,
        "type": "Identifier",
      },
      "location": SourceLocation {
        "end": Position {
          "column": 1,
          "line": 3,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "name": "square",
      "parameterNames": Array [
        "n",
      ],
    },
    Object {
      "identifier": null,
      "location": SourceLocation {
        "end": Position {
          "column": 21,
          "line": 5,
        },
        "start": Position {
          "column": 8,
          "line": 5,
        },
      },
      "name": "child",
      "parameterNames": Array [],
    },
    Object {
      "identifier": null,
      "location": SourceLocation {
        "end": Position {
          "column": 1,
          "line": 9,
        },
        "start": Position {
          "column": 1,
          "line": 7,
        },
      },
      "name": "anonymous",
      "parameterNames": Array [],
    },
  ],
  "identifiers": Array [
    Object {
      "expression": "square",
      "location": Object {
        "end": Position {
          "column": 15,
          "line": 1,
        },
        "start": Position {
          "column": 9,
          "line": 1,
        },
      },
      "name": "square",
    },
    Object {
      "expression": "n",
      "location": Object {
        "end": Position {
          "column": 17,
          "line": 1,
        },
        "start": Position {
          "column": 16,
          "line": 1,
        },
      },
      "name": "n",
    },
    Object {
      "expression": "n",
      "location": Object {
        "end": Position {
          "column": 10,
          "line": 2,
        },
        "start": Position {
          "column": 9,
          "line": 2,
        },
      },
      "name": "n",
    },
    Object {
      "expression": "n",
      "location": Object {
        "end": Position {
          "column": 14,
          "line": 2,
        },
        "start": Position {
          "column": 13,
          "line": 2,
        },
      },
      "name": "n",
    },
    Object {
      "expression": "child",
      "location": Object {
        "end": Position {
          "column": 5,
          "line": 5,
        },
        "start": Position {
          "column": 0,
          "line": 5,
        },
      },
      "name": "child",
    },
  ],
  "memberExpressions": Array [],
  "objectProperties": Array [],
  "variables": Array [
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 17,
          "line": 1,
        },
        "identifierName": "n",
        "start": Position {
          "column": 16,
          "line": 1,
        },
      },
      "name": "n",
    },
  ],
}
`;

exports[`Parser.getSymbols math 1`] = `
Object {
  "functions": Array [
    Object {
      "identifier": Node {
        "end": 13,
        "loc": SourceLocation {
          "end": Position {
            "column": 13,
            "line": 1,
          },
          "identifierName": "math",
          "start": Position {
            "column": 9,
            "line": 1,
          },
        },
        "name": "math",
        "start": 9,
        "type": "Identifier",
      },
      "location": SourceLocation {
        "end": Position {
          "column": 1,
          "line": 8,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "name": "math",
      "parameterNames": Array [
        "n",
      ],
    },
    Object {
      "identifier": Node {
        "end": 36,
        "loc": SourceLocation {
          "end": Position {
            "column": 17,
            "line": 2,
          },
          "identifierName": "square",
          "start": Position {
            "column": 11,
            "line": 2,
          },
        },
        "name": "square",
        "start": 30,
        "type": "Identifier",
      },
      "location": SourceLocation {
        "end": Position {
          "column": 3,
          "line": 4,
        },
        "start": Position {
          "column": 2,
          "line": 2,
        },
      },
      "name": "square",
      "parameterNames": Array [
        "n",
      ],
    },
    Object {
      "identifier": null,
      "location": SourceLocation {
        "end": Position {
          "column": 25,
          "line": 10,
        },
        "start": Position {
          "column": 12,
          "line": 10,
        },
      },
      "name": "child",
      "parameterNames": Array [],
    },
    Object {
      "identifier": null,
      "location": SourceLocation {
        "end": Position {
          "column": 22,
          "line": 11,
        },
        "start": Position {
          "column": 9,
          "line": 11,
        },
      },
      "name": "child2",
      "parameterNames": Array [],
    },
  ],
  "identifiers": Array [
    Object {
      "expression": "math",
      "location": Object {
        "end": Position {
          "column": 13,
          "line": 1,
        },
        "start": Position {
          "column": 9,
          "line": 1,
        },
      },
      "name": "math",
    },
    Object {
      "expression": "n",
      "location": Object {
        "end": Position {
          "column": 15,
          "line": 1,
        },
        "start": Position {
          "column": 14,
          "line": 1,
        },
      },
      "name": "n",
    },
    Object {
      "expression": "square",
      "location": Object {
        "end": Position {
          "column": 17,
          "line": 2,
        },
        "start": Position {
          "column": 11,
          "line": 2,
        },
      },
      "name": "square",
    },
    Object {
      "expression": "n",
      "location": Object {
        "end": Position {
          "column": 19,
          "line": 2,
        },
        "start": Position {
          "column": 18,
          "line": 2,
        },
      },
      "name": "n",
    },
    Object {
      "expression": "n",
      "location": Object {
        "end": Position {
          "column": 5,
          "line": 3,
        },
        "start": Position {
          "column": 4,
          "line": 3,
        },
      },
      "name": "n",
    },
    Object {
      "expression": "n",
      "location": Object {
        "end": Position {
          "column": 9,
          "line": 3,
        },
        "start": Position {
          "column": 8,
          "line": 3,
        },
      },
      "name": "n",
    },
    Object {
      "expression": "two",
      "location": Object {
        "end": Position {
          "column": 23,
          "line": 5,
        },
        "start": Position {
          "column": 8,
          "line": 5,
        },
      },
      "name": "two",
    },
    Object {
      "expression": "two",
      "location": Object {
        "end": Position {
          "column": 11,
          "line": 5,
        },
        "start": Position {
          "column": 8,
          "line": 5,
        },
      },
      "name": "two",
    },
    Object {
      "expression": "square",
      "location": Object {
        "end": Position {
          "column": 20,
          "line": 5,
        },
        "start": Position {
          "column": 14,
          "line": 5,
        },
      },
      "name": "square",
    },
    Object {
      "expression": "four",
      "location": Object {
        "end": Position {
          "column": 25,
          "line": 6,
        },
        "start": Position {
          "column": 8,
          "line": 6,
        },
      },
      "name": "four",
    },
    Object {
      "expression": "four",
      "location": Object {
        "end": Position {
          "column": 12,
          "line": 6,
        },
        "start": Position {
          "column": 8,
          "line": 6,
        },
      },
      "name": "four",
    },
    Object {
      "expression": "squaare",
      "location": Object {
        "end": Position {
          "column": 22,
          "line": 6,
        },
        "start": Position {
          "column": 15,
          "line": 6,
        },
      },
      "name": "squaare",
    },
    Object {
      "expression": "two",
      "location": Object {
        "end": Position {
          "column": 12,
          "line": 7,
        },
        "start": Position {
          "column": 9,
          "line": 7,
        },
      },
      "name": "two",
    },
    Object {
      "expression": "four",
      "location": Object {
        "end": Position {
          "column": 19,
          "line": 7,
        },
        "start": Position {
          "column": 15,
          "line": 7,
        },
      },
      "name": "four",
    },
    Object {
      "expression": "child",
      "location": Object {
        "end": Position {
          "column": 25,
          "line": 10,
        },
        "start": Position {
          "column": 4,
          "line": 10,
        },
      },
      "name": "child",
    },
    Object {
      "expression": "child",
      "location": Object {
        "end": Position {
          "column": 9,
          "line": 10,
        },
        "start": Position {
          "column": 4,
          "line": 10,
        },
      },
      "name": "child",
    },
    Object {
      "expression": "child2",
      "location": Object {
        "end": Position {
          "column": 6,
          "line": 11,
        },
        "start": Position {
          "column": 0,
          "line": 11,
        },
      },
      "name": "child2",
    },
  ],
  "memberExpressions": Array [],
  "objectProperties": Array [],
  "variables": Array [
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 15,
          "line": 1,
        },
        "identifierName": "n",
        "start": Position {
          "column": 14,
          "line": 1,
        },
      },
      "name": "n",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 19,
          "line": 2,
        },
        "identifierName": "n",
        "start": Position {
          "column": 18,
          "line": 2,
        },
      },
      "name": "n",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 23,
          "line": 5,
        },
        "start": Position {
          "column": 8,
          "line": 5,
        },
      },
      "name": "two",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 25,
          "line": 6,
        },
        "start": Position {
          "column": 8,
          "line": 6,
        },
      },
      "name": "four",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 25,
          "line": 10,
        },
        "start": Position {
          "column": 4,
          "line": 10,
        },
      },
      "name": "child",
    },
  ],
}
`;

exports[`Parser.getSymbols proto 1`] = `
Object {
  "functions": Array [
    Object {
      "identifier": null,
      "location": SourceLocation {
        "end": Position {
          "column": 25,
          "line": 1,
        },
        "start": Position {
          "column": 12,
          "line": 1,
        },
      },
      "name": "foo",
      "parameterNames": Array [],
    },
    Object {
      "identifier": null,
      "location": SourceLocation {
        "end": Position {
          "column": 20,
          "line": 3,
        },
        "start": Position {
          "column": 12,
          "line": 3,
        },
      },
      "name": "bar",
      "parameterNames": Array [],
    },
    Object {
      "identifier": null,
      "location": SourceLocation {
        "end": Position {
          "column": 27,
          "line": 7,
        },
        "start": Position {
          "column": 14,
          "line": 7,
        },
      },
      "name": "initialize",
      "parameterNames": Array [],
    },
    Object {
      "identifier": null,
      "location": SourceLocation {
        "end": Position {
          "column": 3,
          "line": 10,
        },
        "start": Position {
          "column": 2,
          "line": 8,
        },
      },
      "name": "doThing",
      "parameterNames": Array [
        "b",
      ],
    },
    Object {
      "identifier": null,
      "location": SourceLocation {
        "end": Position {
          "column": 3,
          "line": 13,
        },
        "start": Position {
          "column": 10,
          "line": 11,
        },
      },
      "name": "render",
      "parameterNames": Array [],
    },
  ],
  "identifiers": Array [
    Object {
      "expression": "foo",
      "location": Object {
        "end": Position {
          "column": 25,
          "line": 1,
        },
        "start": Position {
          "column": 6,
          "line": 1,
        },
      },
      "name": "foo",
    },
    Object {
      "expression": "foo",
      "location": Object {
        "end": Position {
          "column": 9,
          "line": 1,
        },
        "start": Position {
          "column": 6,
          "line": 1,
        },
      },
      "name": "foo",
    },
    Object {
      "expression": "bar",
      "location": Object {
        "end": Position {
          "column": 20,
          "line": 3,
        },
        "start": Position {
          "column": 6,
          "line": 3,
        },
      },
      "name": "bar",
    },
    Object {
      "expression": "bar",
      "location": Object {
        "end": Position {
          "column": 9,
          "line": 3,
        },
        "start": Position {
          "column": 6,
          "line": 3,
        },
      },
      "name": "bar",
    },
    Object {
      "expression": "TodoView",
      "location": Object {
        "end": Position {
          "column": 2,
          "line": 14,
        },
        "start": Position {
          "column": 6,
          "line": 5,
        },
      },
      "name": "TodoView",
    },
    Object {
      "expression": "TodoView",
      "location": Object {
        "end": Position {
          "column": 14,
          "line": 5,
        },
        "start": Position {
          "column": 6,
          "line": 5,
        },
      },
      "name": "TodoView",
    },
    Object {
      "expression": "Backbone",
      "location": Object {
        "end": Position {
          "column": 25,
          "line": 5,
        },
        "start": Position {
          "column": 17,
          "line": 5,
        },
      },
      "name": "Backbone",
    },
    Object {
      "expression": "View",
      "location": Object {
        "end": Position {
          "column": 30,
          "line": 5,
        },
        "start": Position {
          "column": 26,
          "line": 5,
        },
      },
      "name": "View",
    },
    Object {
      "expression": "extend",
      "location": Object {
        "end": Position {
          "column": 37,
          "line": 5,
        },
        "start": Position {
          "column": 31,
          "line": 5,
        },
      },
      "name": "extend",
    },
    Object {
      "expression": "tagName",
      "location": Object {
        "end": Position {
          "column": 9,
          "line": 6,
        },
        "start": Position {
          "column": 2,
          "line": 6,
        },
      },
      "name": "tagName",
    },
    Object {
      "expression": "initialize",
      "location": Object {
        "end": Position {
          "column": 12,
          "line": 7,
        },
        "start": Position {
          "column": 2,
          "line": 7,
        },
      },
      "name": "initialize",
    },
    Object {
      "expression": "doThing",
      "location": Object {
        "end": Position {
          "column": 9,
          "line": 8,
        },
        "start": Position {
          "column": 2,
          "line": 8,
        },
      },
      "name": "doThing",
    },
    Object {
      "expression": "b",
      "location": Object {
        "end": Position {
          "column": 11,
          "line": 8,
        },
        "start": Position {
          "column": 10,
          "line": 8,
        },
      },
      "name": "b",
    },
    Object {
      "expression": "console",
      "location": Object {
        "end": Position {
          "column": 11,
          "line": 9,
        },
        "start": Position {
          "column": 4,
          "line": 9,
        },
      },
      "name": "console",
    },
    Object {
      "expression": "log",
      "location": Object {
        "end": Position {
          "column": 15,
          "line": 9,
        },
        "start": Position {
          "column": 12,
          "line": 9,
        },
      },
      "name": "log",
    },
    Object {
      "expression": "b",
      "location": Object {
        "end": Position {
          "column": 23,
          "line": 9,
        },
        "start": Position {
          "column": 22,
          "line": 9,
        },
      },
      "name": "b",
    },
    Object {
      "expression": "render",
      "location": Object {
        "end": Position {
          "column": 8,
          "line": 11,
        },
        "start": Position {
          "column": 2,
          "line": 11,
        },
      },
      "name": "render",
    },
  ],
  "memberExpressions": Array [
    Object {
      "expression": "Backbone.View.extend",
      "expressionLocation": SourceLocation {
        "end": Position {
          "column": 37,
          "line": 5,
        },
        "start": Position {
          "column": 17,
          "line": 5,
        },
      },
      "location": Object {
        "end": Position {
          "column": 37,
          "line": 5,
        },
        "start": Position {
          "column": 31,
          "line": 5,
        },
      },
      "name": "extend",
    },
    Object {
      "expression": "Backbone.View",
      "expressionLocation": SourceLocation {
        "end": Position {
          "column": 30,
          "line": 5,
        },
        "start": Position {
          "column": 17,
          "line": 5,
        },
      },
      "location": Object {
        "end": Position {
          "column": 30,
          "line": 5,
        },
        "start": Position {
          "column": 26,
          "line": 5,
        },
      },
      "name": "View",
    },
    Object {
      "expression": "console.log",
      "expressionLocation": SourceLocation {
        "end": Position {
          "column": 15,
          "line": 9,
        },
        "start": Position {
          "column": 4,
          "line": 9,
        },
      },
      "location": Object {
        "end": Position {
          "column": 15,
          "line": 9,
        },
        "start": Position {
          "column": 12,
          "line": 9,
        },
      },
      "name": "log",
    },
  ],
  "objectProperties": Array [
    Object {
      "expression": undefined,
      "location": Object {
        "end": Position {
          "column": 9,
          "line": 6,
        },
        "start": Position {
          "column": 2,
          "line": 6,
        },
      },
      "name": "tagName",
    },
    Object {
      "expression": undefined,
      "location": Object {
        "end": Position {
          "column": 12,
          "line": 7,
        },
        "start": Position {
          "column": 2,
          "line": 7,
        },
      },
      "name": "initialize",
    },
    Object {
      "expression": undefined,
      "location": Object {
        "end": Position {
          "column": 8,
          "line": 11,
        },
        "start": Position {
          "column": 2,
          "line": 11,
        },
      },
      "name": "render",
    },
  ],
  "variables": Array [
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 25,
          "line": 1,
        },
        "start": Position {
          "column": 6,
          "line": 1,
        },
      },
      "name": "foo",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 20,
          "line": 3,
        },
        "start": Position {
          "column": 6,
          "line": 3,
        },
      },
      "name": "bar",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 2,
          "line": 14,
        },
        "start": Position {
          "column": 6,
          "line": 5,
        },
      },
      "name": "TodoView",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 15,
          "line": 6,
        },
        "start": Position {
          "column": 2,
          "line": 6,
        },
      },
      "name": "tagName",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 11,
          "line": 8,
        },
        "identifierName": "b",
        "start": Position {
          "column": 10,
          "line": 8,
        },
      },
      "name": "b",
    },
  ],
}
`;

exports[`Parser.getSymbols var 1`] = `
Object {
  "functions": Array [],
  "identifiers": Array [
    Object {
      "expression": "foo",
      "location": Object {
        "end": Position {
          "column": 11,
          "line": 1,
        },
        "start": Position {
          "column": 4,
          "line": 1,
        },
      },
      "name": "foo",
    },
    Object {
      "expression": "foo",
      "location": Object {
        "end": Position {
          "column": 7,
          "line": 1,
        },
        "start": Position {
          "column": 4,
          "line": 1,
        },
      },
      "name": "foo",
    },
    Object {
      "expression": "bar",
      "location": Object {
        "end": Position {
          "column": 11,
          "line": 2,
        },
        "start": Position {
          "column": 4,
          "line": 2,
        },
      },
      "name": "bar",
    },
    Object {
      "expression": "bar",
      "location": Object {
        "end": Position {
          "column": 7,
          "line": 2,
        },
        "start": Position {
          "column": 4,
          "line": 2,
        },
      },
      "name": "bar",
    },
    Object {
      "expression": "baz",
      "location": Object {
        "end": Position {
          "column": 13,
          "line": 3,
        },
        "start": Position {
          "column": 6,
          "line": 3,
        },
      },
      "name": "baz",
    },
    Object {
      "expression": "baz",
      "location": Object {
        "end": Position {
          "column": 9,
          "line": 3,
        },
        "start": Position {
          "column": 6,
          "line": 3,
        },
      },
      "name": "baz",
    },
    Object {
      "expression": "a",
      "location": Object {
        "end": Position {
          "column": 11,
          "line": 4,
        },
        "start": Position {
          "column": 6,
          "line": 4,
        },
      },
      "name": "a",
    },
    Object {
      "expression": "a",
      "location": Object {
        "end": Position {
          "column": 7,
          "line": 4,
        },
        "start": Position {
          "column": 6,
          "line": 4,
        },
      },
      "name": "a",
    },
    Object {
      "expression": "b",
      "location": Object {
        "end": Position {
          "column": 7,
          "line": 5,
        },
        "start": Position {
          "column": 2,
          "line": 5,
        },
      },
      "name": "b",
    },
    Object {
      "expression": "b",
      "location": Object {
        "end": Position {
          "column": 3,
          "line": 5,
        },
        "start": Position {
          "column": 2,
          "line": 5,
        },
      },
      "name": "b",
    },
  ],
  "memberExpressions": Array [],
  "objectProperties": Array [],
  "variables": Array [
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 11,
          "line": 1,
        },
        "start": Position {
          "column": 4,
          "line": 1,
        },
      },
      "name": "foo",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 11,
          "line": 2,
        },
        "start": Position {
          "column": 4,
          "line": 2,
        },
      },
      "name": "bar",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 13,
          "line": 3,
        },
        "start": Position {
          "column": 6,
          "line": 3,
        },
      },
      "name": "baz",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 11,
          "line": 4,
        },
        "start": Position {
          "column": 6,
          "line": 4,
        },
      },
      "name": "a",
    },
    Object {
      "location": SourceLocation {
        "end": Position {
          "column": 7,
          "line": 5,
        },
        "start": Position {
          "column": 2,
          "line": 5,
        },
      },
      "name": "b",
    },
  ],
}
`;
